--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
-API_BASE_URL=http://localhost:3001/api
+MONGO_URL="mongodb+srv://proames75yt:123@cluster0.brnnjn0.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
+EMAIL="proames75yt@gmail.com"
+EMAIL_PASS="whfx irog grdl hyys"
